# ZPAD

./: .gitignore  README.md
lab2/: Part1.ipynb  Part2.ipynb  README.md
lab3/: LAB3.ipynb  README.md
lab4/: README.md  lab4.py
lab5/: README.md  ZPADlab5.py
lab6/: preinstall.sh  readme.md
lab6/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab6/src/: CameraProvider.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: .gitignore  CMakeLists.txt  readme.md  run.sh
lab7/Lab_7/: preinstall.sh
lab7/Lab_7/include/: FaceDetector.hpp
lab7/Lab_7/src/: FrameProcessor.cpp
lab7/include/: FrameProcessor.hpp  KeyProcessor.hpp
lab7/src/: CameraProvider.cpp  Display.cpp  FaceDetector.cpp  KeyProcessor.cpp  main.cpp
